--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,9 @@
     "mongodb": "^4.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
+    "nodemon": "^2.0.15",
+    "sinon": "^13.0.1"
   }
 }
